--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "jssip": "^3.9.0",
+    "sanitize-html": "^2.7.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.2.0",
+    "rollup-plugin-strict-cjs": "file:rollup-plugin-strict-cjs-0.1.0.tar.gz",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
     "vue-tsc": "^0.29.8"
